# example_plugin

./: .gitmodules  meson.build
src/: meson.build
